--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ Swift/Pods/
 Obj-C/Pods/
 
 Swift/Podfile.lock
-Obj-C//Podfile.lock
+Obj-C/Podfile.lock
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
