--- a/Obj-C/Podfile
+++ b/Obj-C/Podfile
@@ -1,14 +1,14 @@
-platform :ios, '12.0'
+platform :ios, '13.0'
 workspace 'BidMachine-iOS-Examples.xcworkspace'
 
 source 'https://github.com/appodeal/CocoaPods.git'
-source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 install! 'cocoapods', :deterministic_uuids => false, :warn_for_multiple_pod_sources => false
 use_frameworks!
 
 def bidmachine 
-    pod "BidMachine", "~> 2.6.0"
+    pod 'BidMachine', '~> 3.0'
 end
 
 target 'Banner' do 
@@ -28,11 +28,6 @@ end
 
 target 'NativeAd' do 
     project 'NativeAd/NativeAd.xcodeproj' 
-    bidmachine
-end
-
-target 'MediaAd' do 
-    project 'MediaAd/MediaAd.xcodeproj' 
     bidmachine
 end
 
