--- a/Obj-C/Podfile
+++ b/Obj-C/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '13.0'
 workspace 'BidMachine-iOS-Examples.xcworkspace'
 
-source 'https://github.com/appodeal/CocoaPods.git'
+source 'https://github.com/bidmachine/CocoaPods-Specs.git'
 source 'https://cdn.cocoapods.org/'
 
 install! 'cocoapods', :deterministic_uuids => false, :warn_for_multiple_pod_sources => false
@@ -37,7 +37,7 @@ post_install do |installer|
   project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['ENABLE_BITCODE'] = 'NO'
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
       config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
