--- a/Swift/Podfile
+++ b/Swift/Podfile
@@ -1,14 +1,14 @@
-platform :ios, '12.0'
+platform :ios, '13.0'
 workspace 'BidMachine-iOS-Examples.xcworkspace'
 
-source 'https://github.com/appodeal/CocoaPods.git'
-source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/bidmachine/CocoaPods-Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 install! 'cocoapods', :deterministic_uuids => false, :warn_for_multiple_pod_sources => false
 use_frameworks!
 
-def bidmachine 
-    pod "BidMachine", "~> 2.6.0"
+def bidmachine
+    pod 'BidMachine', '~> 3.0'
 end
 
 target 'Banner' do 
@@ -31,18 +31,13 @@ target 'NativeAd' do
     bidmachine
 end
 
-target 'MediaAd' do 
-    project 'MediaAd/MediaAd.xcodeproj' 
-    bidmachine
-end
-
 # Post install configuration
 post_install do |installer|
   project = installer.pods_project
   project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['ENABLE_BITCODE'] = 'NO'
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
       config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
